added link for back arrow for project pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="Tyler's portfolio website showcasing his work and skills"
     />
     <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/favicon/apple-touch-icon.png"
